--- a/public/css/index.css
+++ b/public/css/index.css
@@ -71,12 +71,12 @@ body {
     margin-top:30px;
 }
 
-.btn-share
+.btn-sign, .btn-share
 {
     clear: both;
-    width:60vw;
-    height:50px;
-    line-height:50px;
+    width:70vw;
+    height:39px;
+    line-height:39px;
     text-align: center;
     color:red;
     font-weight:600;
@@ -85,6 +85,30 @@ body {
     -moz-border-radius:25px;
     border-radius:25px;
     margin:auto;
+    font-size:18px;
+
+    box-shadow: 0 0 10px rgba(0,0,0,.3) inset;
+    -webkit-animation-name:'ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 0.5s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: alternate;/*定义动画方式*/
+}
+
+@keyframes ripple {
+    0% {
+        width: 66vw;
+        height: 35px;
+        line-height: 35px;
+        font-size:16px;
+    }
+    100% {
+        width: 70vw;
+        height: 39px;
+        line-height: 39px;
+        font-size:18px;
+    }
 }
 
 .mid {
