--- a/public/css/cash-red-pack.css
+++ b/public/css/cash-red-pack.css
@@ -58,20 +58,23 @@ body {
     width:40vw;
     height:40vw;
     line-height:35vw;
-    background-image: url('../imgs/cash-receive-btn.png');
-    -webkit-background-size:cover;
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    color:#b63c0b;
     text-align: center;
     font-size:30px;
     font-weight:600;
     margin:10vh auto 3vh auto;
+    -webkit-background-size:cover;
+    background-size:cover;
+    background-image: url('../imgs/cash-receive-btn.png');
+    background-repeat: no-repeat;
+    background-position: center;
 }
+
 .cash-red-pack-main .withdraw-list-box {
     height:16vh;
     overflow: hidden;
 }
+
 .cash-red-pack-main .withdraw-list {
     display: flex;
     flex-direction: column;
@@ -114,53 +117,4 @@ body {
     font-size:30px;
     font-weight:600;
     color:#f3c861;
-}
-
-/* 规则界面  */
-.rule-container {
-    display:none;
-    position: fixed;
-    left:0;
-    top:0;
-    width:100vw;
-    height:100vh;
-    background-color:rgba(0,0,0,0.3);
-    z-index:99;
-}
-
-.rule-container .rule-box {
-    position: relative;
-    width:80vw;
-    height:50vh;
-    margin:20vh auto;
-    background-color:white;
-    border-radius: 15px;
-    padding:15px;
-}
-
-.rule-container .rule-box .rule-title {
-    height:39px;
-    text-align: center;
-    font-weight:600;
-    font-size:18px;
-    color:red;
-}
-
-.rule-container .rule-box .btn-close-rule {
-    position: absolute;
-    top:-39px;
-    right:-10px;
-    width: 30px;
-    height: 30px;
-    line-height:30px;
-    border:1px solid white;
-    border-radius: 15px;
-    text-align: center;
-    color:white;
-}
-
-.rule-container .rule-content {
-    width:80vw;
-    height:45vh;
-    overflow: scroll;
 }
