红包配置获取

--- a/public/css/cash-red-pack.css
+++ b/public/css/cash-red-pack.css
@@ -5,35 +5,36 @@ body {
 }
 
 .cash-red-pack-main {
-    width:100vw;
-    height:100vh;
+    width:7.5rem;
+    min-height: 100vh;
     background-image: url("../imgs/cash-red-pack-bg.png");
     -webkit-background-size:cover;
     background-size:cover;
 }
 
 .cash-red-pack-main .tips {
-    width:100vw;
-    padding-top:60px;
+    width: 100vw;
+    padding-top: 1.2rem;
     text-align: center;
-    font-size: 30px;
-    font-weight:600;
-    color:#f3c861;
+    font-size: .6rem;
+    font-weight: 600;
+    color: #f3c861;
 }
 
 .cash-red-pack-main .rule {
     position: absolute;
-    width:80px;
-    height: 30px;
-    line-height:30px;
-    right:0;
-    top:15px;
-    padding-right:3px;
+    width: 1.5rem;
+    height: 0.5rem;
+    line-height: .5rem;
+    right: 0;
+    top: .3rem;
+    padding-right: 0.15rem;
     text-align: right;
     background-color: rgba(155,17,4,1);
-    color:#ff958b;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    color: #ff958b;
+    border-top-left-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+    font-size: 0.3rem;
 }
 
 .cash-red-pack-main .mid {
@@ -45,8 +46,8 @@ body {
     flex-direction: column;
     /*border:1px solid #EEE;*/
     position:relative;
-    width: 90vw;
-    height: 60vh;
+    width: 7rem;
+    height: 8rem;
     margin: 5vh auto;
     background-image: url(../imgs/redPackEffect.png);
     background-position: center;
@@ -55,17 +56,17 @@ body {
 }
 
 .cash-red-pack-main .red-pack-info .btn-receive {
-    width:40vw;
-    height:40vw;
-    line-height:35vw;
-    color:#b63c0b;
+    width: 3rem;
+    height: 3rem;
+    line-height: 2.7rem;
+    color: #b63c0b;
     text-align: center;
-    font-size:30px;
-    font-weight:600;
-    margin:10vh auto 3vh auto;
-    -webkit-background-size:cover;
-    background-size:cover;
-    background-image: url('../imgs/cash-receive-btn.png');
+    font-size: .6rem;
+    font-weight: 600;
+    margin: 1.5rem auto 0.3rem;
+    -webkit-background-size: cover;
+    background-size: cover;
+    background-image: url(../imgs/cash-receive-btn.png);
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -79,42 +80,43 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width:65vw;
-    height:16vh;
-    /*border:1px solid aqua;*/
-    margin:1vh auto auto 13vw;
+    margin: auto;
     overflow: hidden;
-    padding:0;
+    width: 5rem;
+    height: 2rem;
+    font-size: 0.36rem;
+    padding: 0;
+    /* border: 1px solid aqua; */
 }
 
 .cash-red-pack-main .withdraw-list .item {
     display: flex;
-    min-height: 5vh;
-    line-height: 5vh;
+    min-height: 0.6rem;
+    line-height: .6rem;
+    margin-top: .3rem;
+    border-radius: 0.3rem;
     background-color: rgba(0,0,0,0.3);
-    border-radius: 2.5vh;
-    color:white;
-    margin-bottom:3vh;
+    color: white;
 }
 .cash-red-pack-main .withdraw-list .item span.nickname {
     padding:0 5px;
 }
 
 .cash-red-pack-main .withdraw-list .item .withdraw-info {
-    height: 5vh;
-    line-height: 5vh;
+    height: 0.6rem;
+    line-height: 0.6rem;
     overflow: hidden;
 }
 .cash-red-pack-main .withdraw-list .item .head-img-url {
-    width:5vh;
-    height:5vh;
-    border-radius: 2.5vh;
+    width: .6rem;
+    height: .6rem;
+    border-radius: 0.3rem;
     background-color: cornflowerblue;
 }
 
 .cash-red-pack-main .msg {
     text-align: center;
-    font-size:30px;
+    font-size:.6rem;
     font-weight:600;
     color:#f3c861;
 }
