--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -50,9 +50,9 @@ body {
 }
 .red-pack-container .red-pack-bg {
     position:relative;
-    width: 80vw;
-    height: 60vh;
-    margin: 15vh auto;
+    width: 7.5rem;
+    height: 7rem;
+    margin: 2rem auto;
     background-image: url(../imgs/redPackEffect.png);
     background-position: center;
     background-size: cover;
@@ -68,38 +68,38 @@ body {
 }
 
 .red-pack-info .tips {
-    margin:30vh 0 3vh 0;
-    font-size: 20px;
-    height:30px;
-    line-height:30px;
+    margin: 3.6rem auto 0;
+    font-size: .4rem;
+    height: .6rem;
+    line-height: .6rem;
 }
 .red-pack-info .total {
     font-weight:600;
-    height:30px;
-    line-height:30px;
-    font-size: 30px;
+    height:.6rem;
+    line-height:.6rem;
+    font-size: .6rem;
 }
 .red-pack-info .received {
-    margin-top:1vh;
-    height:40px;
-    line-height:30px;
+    margin-top: 0.1rem;
+    height: .8rem;
+    line-height: .6rem;
 
 }
 .red-pack-info .btn-share-friend {
-    width:60vw;
-    height:36px;
-    line-height:36px;
-    background-color:#f3c861;
-    border-radius: 18px;
-    color:#f21a17;
-    font-weight:600;
-    font-size:18px;
+    width: 50vw;
+    height: 0.6rem;
+    line-height: .6rem;
+    background-color: #f3c861;
+    border-radius: .3rem;
+    color: #f21a17;
+    font-weight: 600;
+    font-size: 0.3rem;
     text-align: center;
 }
 
 .red-pack-info .btn-close {
     position: absolute;
-    top: 20px;
+    top: 0.3rem;
     width: 100vw;
-    height: 39px;
+    height: .8rem;
 }
