--- a/public/css/search-form.css
+++ b/public/css/search-form.css
@@ -1,30 +1,23 @@
-html,body {height: 100%;}
-body {padding: 0px; margin:0px; background:url(../img/image.jpg) ; background-position: center; background-size: cover; background-attachment: fixed; background-repeat: no-repeat;}
-
 .search-wrapper {
-    position: absolute;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    top:50%;
-    left:50%;
+    position: relative;
+    width: 100vw;
 }
 .search-wrapper.active {}
 
 .search-wrapper .input-holder {
     overflow: hidden;
-    height: 70px;
+    height: 1rem;
     background: rgba(255,255,255,0);
     border-radius:6px;
     position: relative;
-    width:70px;
     -webkit-transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
 .search-wrapper.active .input-holder {
-    border-radius: 50px;
-    width:450px;
+    border-radius: .5rem;
+    width: 90vw;
+    margin: 0.1rem auto;
     background: rgba(0,0,0,0.5);
     -webkit-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     -moz-transition: all .5s cubic-bezier(0.000, 0.105, 0.035, 1.570);
@@ -32,31 +25,30 @@ body {padding: 0px; margin:0px; background:url(../img/image.jpg) ; background-po
 }
 
 .search-wrapper .input-holder .search-input {
-    width:100%;
-    height: 50px;
-    padding:0px 70px 0 20px;
+    width: 100%;
+    height: .8rem;
+    margin: 0;
+    padding: 0 1.4rem 0 .4rem;
     opacity: 0;
     position: absolute;
-    top:0px;
-    left:0px;
+    top: 0;
+    left: 0;
     background: transparent;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border:none;
-    outline:none;
-    font-family:"Open Sans", Arial, Verdana;
-    font-size: 16px;
+    border: none;
+    outline: none;
+    font-size: .32rem;
     font-weight: 400;
     line-height: 20px;
-    color:#FFF;
+    color: #FFF;
     -webkit-transform: translate(0, 60px);
     -moz-transform: translate(0, 60px);
     transform: translate(0, 60px);
     -webkit-transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     -moz-transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
     transition: all .3s cubic-bezier(0.000, 0.105, 0.035, 1.570);
-
     -webkit-transition-delay: 0.3s;
     -moz-transition-delay: 0.3s;
     transition-delay: 0.3s;
@@ -69,26 +61,26 @@ body {padding: 0px; margin:0px; background:url(../img/image.jpg) ; background-po
 }
 
 .search-wrapper .input-holder .search-icon {
-    width:70px;
-    height:70px;
-    border:none;
-    border-radius:6px;
-    background: #FFF;
-    padding:0px;
-    outline:none;
+    width: 1rem;
+    height: 1rem;
+    border: none;
+    border-radius: .2rem;
+    background: #ccc;
+    padding: 0;
+    outline: none;
     position: relative;
     z-index: 2;
-    float:right;
+    float: right;
     cursor: pointer;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
+    /* -webkit-transition: all 0.3s ease-in-out; */
+    /*-moz-transition: all 0.3s ease-in-out;*/
+    /* transition: all 0.3s ease-in-out; */
 }
 .search-wrapper.active .input-holder .search-icon {
-    width: 50px;
-    height:50px;
-    margin: 10px;
-    border-radius: 30px;
+    width: 1rem;
+    height: 1rem;
+    margin: auto;
+    border-radius: 0.5rem;
 }
 .search-wrapper .input-holder .search-icon span {
     width:22px;
@@ -188,9 +180,4 @@ body {padding: 0px; margin:0px; background:url(../img/image.jpg) ; background-po
     font-size: 14px;
     display:none;
     color:#B7B7B7;
-}
-
-
-@media screen and (max-width: 560px) {
-    .search-wrapper.active .input-holder {width:200px;}
 }
