--- a/public/css/search-form.css
+++ b/public/css/search-form.css
@@ -83,8 +83,8 @@
     border-radius: 0.5rem;
 }
 .search-wrapper .input-holder .search-icon span {
-    width:22px;
-    height:22px;
+    width: .44rem;
+    height: .44rem;
     display: inline-block;
     vertical-align: middle;
     position:relative;
@@ -106,20 +106,20 @@
     content:'';
 }
 .search-wrapper .input-holder .search-icon span::before {
-    width: 4px;
-    height: 11px;
-    left: 9px;
-    top: 18px;
-    border-radius: 2px;
+    width: .08rem;
+    height: .22rem;
+    left: .18rem;
+    top: .36rem;
+    border-radius: 0.1rem;
     background: #974BE0;
 }
 .search-wrapper .input-holder .search-icon span::after {
-    width: 14px;
-    height: 14px;
-    left: 0px;
-    top: 0px;
-    border-radius: 16px;
-    border: 4px solid #974BE0;
+    width: .28rem;
+    height: .28rem;
+    left: 0;
+    top: 0;
+    border-radius: 0.32rem;
+    border: .07rem solid #974BE0;
 }
 
 .search-wrapper .close {
