--- a/public/css/search-form.css
+++ b/public/css/search-form.css
@@ -6,7 +6,7 @@
 
 .search-wrapper .input-holder {
     overflow: hidden;
-    height: 1rem;
+    height: .6rem;
     background: rgba(255,255,255,0);
     border-radius:6px;
     position: relative;
