--- a/public/css/search-form.css
+++ b/public/css/search-form.css
@@ -26,12 +26,12 @@
 
 .search-wrapper .input-holder .search-input {
     width: 100%;
-    height: .8rem;
+    height: 0.6rem;
     margin: 0;
     padding: 0 1.4rem 0 .4rem;
     opacity: 0;
     position: absolute;
-    top: 0;
+    top: -.2rem;
     left: 0;
     background: transparent;
     -webkit-box-sizing: border-box;
@@ -41,7 +41,7 @@
     outline: none;
     font-size: .32rem;
     font-weight: 400;
-    line-height: 20px;
+    line-height: .4rem;
     color: #FFF;
     -webkit-transform: translate(0, 60px);
     -moz-transform: translate(0, 60px);
@@ -77,13 +77,13 @@
     /* transition: all 0.3s ease-in-out; */
 }
 .search-wrapper.active .input-holder .search-icon {
-    width: 1rem;
-    height: 1rem;
+    width: 0.6rem;
+    height: 0.6rem;
     margin: auto;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
 }
 .search-wrapper .input-holder .search-icon span {
-    width: .44rem;
+    width: .34rem;
     height: .44rem;
     display: inline-block;
     vertical-align: middle;
@@ -107,15 +107,15 @@
 }
 .search-wrapper .input-holder .search-icon span::before {
     width: .08rem;
-    height: .22rem;
-    left: .18rem;
-    top: .36rem;
+    height: 0.22rem;
+    left: 0.13rem;
+    top: 0.36rem;
     border-radius: 0.1rem;
     background: #974BE0;
 }
 .search-wrapper .input-holder .search-icon span::after {
-    width: .28rem;
-    height: .28rem;
+    width: 0.2rem;
+    height: 0.2rem;
     left: 0;
     top: 0;
     border-radius: 0.32rem;
