--- a/public/css/room-detail.css
+++ b/public/css/room-detail.css
@@ -7,92 +7,70 @@ body {
     background-color: #EEE;
 }
 
-.main .top {
-    display: flex;
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100vw;
-    height: .8rem;
-    z-index: 99;
-    border-bottom: 1px solid #888;
-    justify-content: space-evenly;
-    background-color: #4d8ebb;
-}
-
-.main .top input {
-    width: 3rem;
-    height: 0.4rem;
-    margin-top: 0.2rem;
-    color:#FFF;
-    border: 1px solid #888;
-}
-.main .top button {
-    width: 1rem;
-    height: 0.6rem;
-    margin-top: .1rem;
-    font-size: 0.2rem;
-}
-
 .main .ads {
-    margin-top:.8rem;
 }
 
-.main .recommend-house-box {
-    margin-bottom: 2rem;
+.main .house-box {
 }
-.main .recommend-house-box .tips-bar {
-    display: flex;
-    background-color: #FFF;
-    border: 1px solid #ccc;
-    border-left: 0;
-    border-right: 0;
-}
-.main .recommend-house-box .tips-bar img {
-    width: 0.4rem;
-    height: 0.4rem;
-    align-self: center;
-    padding-left: 0.3rem;
-}
-.main .recommend-house-box .tips-bar .text {
-    height: 0.6rem;
-    line-height: 0.6rem;
-    display: block;
-    margin-left: .3rem;
-}
-/**
-推荐房源区
- */
-.main .recommend-house-box .house-list {
 
-}
-.main .recommend-house-box .house-list .item {
+.main .house-box .title-box {
+    height: 1rem;
     display: flex;
-    background-color: #FFF;
-    margin-bottom:0.03rem;
-}
-.main .recommend-house-box .house-list .item .cover {
-    width:3.8rem;
-    height: 2.8rem;
-    margin-top: 0.1rem;
-    background-size: cover;
-}
-.main .recommend-house-box .house-list .item .info {
-    display: flex;
-    padding: 0.3rem;
-    flex-direction: column;
     justify-content: space-between;
+    padding: .15rem .3rem;
+    margin-bottom: .3rem;
+    background-color: #FFF;
+}
+.main .house-box .title-box .info .title {
+    font-size: .3rem;
+    font-weight: 600;
+    margin-bottom: .1rem;
+}
+.main .house-box .title-box .info .create-time {
+    color:#888;
+}
 
+.main .house-box .title-box .btn-mark {
+    font-size: 0.3rem;
+    background-color: #afdafc;
+    padding: 0.2rem 0.3rem;
+    border-radius: 0.2rem;
 }
-.main .recommend-house-box .house-list .item .info .name {
-    color:#e94219;
-    font-weight:600;
+
+.main .house-box .mid-box {
+    background-color: #FFF;
 }
-.main .recommend-house-box .house-list .item .info .btn-see-house {
-    background-color: #e99421;
-    color: #FFF;
+
+
+.main .house-box .mid-box .price-box {
+    height: 1rem;
+    display: flex;
+    justify-content: space-between;
+    border-top:1px solid #CCC;
+    border-bottom:1px solid #CCC;
+}
+.main .house-box .mid-box .price-box .item {
+    align-self: center;
     text-align: center;
-    border-radius: 0.1rem;
-    width: 1.2rem;
-    padding: 0.1rem;
+    font-weight: 600;
+    font-size: .28rem;
+    width: 50vw;
+}
+.main .house-box .mid-box .price-box .item .val {
+    color:red;
+}
+.main .house-box .mid-box .price-box .item:first-child {
+    border-right:1px solid #CCC;
+}
+.main .house-box .mid-box .desc-box {
+    padding:0 0.3rem;
+}
+.main .house-box .mid-box .label {
+    height: 0.5rem;
+    line-height: 0.5rem;
+    font-weight: 600;
+    font-size: .28rem;
+}
+.main .house-box .mid-box .detail-box {
+    border-top:1px solid #CCC;
 }
