--- a/public/css/home.css
+++ b/public/css/home.css
@@ -136,6 +136,12 @@ Loading动画
     left:44px;
     animation-delay: .8s;
 }
+@-webkit-keyframes preloader_1 {
+    0% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    25% {height:30px;transform:translateY(15px);background:#3498db;}
+    50% {height:5px;transform:translateY(0px);background:#9b59b6;}
+    100% {height:5px;transform:translateY(0px);background:#9b59b6;}
+}
 @keyframes preloader_1 {
     0% {height:5px;transform:translateY(0px);background:#9b59b6;}
     25% {height:30px;transform:translateY(15px);background:#3498db;}
