--- a/public/css/room-list.css
+++ b/public/css/room-list.css
@@ -135,6 +135,7 @@ body {
     padding: 0 0.3rem;
     flex-direction: column;
     justify-content: space-evenly;
+    -webkit-justify-content: space-evenly;
     color: #000;
 
 }
