flex布局css兼容性问题

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -81,7 +81,7 @@ body {
     display: flex;    
     padding: 0 0.3rem;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     color: #000;
 
 }
