--- a/public/css/room-detail.css
+++ b/public/css/room-detail.css
@@ -74,7 +74,7 @@ body {
     padding: 0 0.3rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     height: 2.8rem;
 }
 .main .house-box .mid-box .desc-box span {
