--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -190,7 +190,7 @@ body {
     height: 1rem;
     line-height: 1rem;
     font-size: 0.26rem;
-    border-bottom:0.01rem dashed #ccc;
+    border-bottom:1px dashed #ccc;
 }
 
 .help-list .help-item .head-img {
