--- a/public/css/room-detail.css
+++ b/public/css/room-detail.css
@@ -77,8 +77,14 @@ body {
     justify-content: space-around;
     height: 2.8rem;
 }
+.main .house-box .mid-box .desc-box .tag-list {
+    display: flex;
+}
 .main .house-box .mid-box .desc-box span {
     padding-right:.2rem;
+}
+.main .house-box .mid-box .desc-box span.tag-name {
+
 }
 .main .house-box .mid-box .label {
     height: 0.5rem;
@@ -89,7 +95,7 @@ body {
     border-left:.1rem solid darkred;
 }
 
-.main .house-box .mid-box .detail-box {
+.main .house-box .mid-box .detail-box, .main .house-box .mid-box .similar-box {
     padding: .1rem .3rem;
     border-top:1px solid #CCC;
 }
@@ -112,4 +118,54 @@ body {
 
 .main .btn-box .btn-see {
     background-color: indianred;
+}
+
+
+/**
+相似房源
+ */
+.main .house-box .house-list {
+    overflow: auto;
+}
+.main .house-box .house-list .no-data {
+    display: none;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    font-size: 0.35rem;
+    color: #888;
+    letter-spacing: .03rem;
+}
+.main .house-box .house-list .item {
+    display: flex;
+    background-color: #FFF;
+    margin-bottom:0.03rem;
+}
+.main .house-box .house-list .item .cover {
+    width:3.8rem;
+    height: 2.8rem;
+    margin-top: 0.1rem;
+    background-size: cover;
+}
+.main .house-box .house-list .item .info {
+    display: flex;
+    display: -webkit-flex;
+    padding: 0 0.3rem;
+    flex-direction: column;
+    justify-content: space-around;
+    -webkit-justify-content: space-around;
+    color: #000;
+
+}
+.main .house-box .house-list .item .info .name {
+    color:#e94219;
+    font-weight:600;
+}
+.main .house-box .house-list .item .info .btn-see-house {
+    background-color: #e99421;
+    color: #FFF;
+    text-align: center;
+    border-radius: 0.1rem;
+    width: 1.2rem;
+    padding: 0.1rem;
 }
