--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -274,6 +274,60 @@ body {
     height: .8rem;
 }
 
+/**
+分享成功效果
+ */
+.share-success-box {
+    display: none;
+    position: fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    width:100vw;
+    background-color: rgba(0,0,0,0.9);
+}
+.share-success-box .share-main {
+    position: absolute;
+    width: 5rem;
+    height: 3rem;
+    top: 3rem;
+    left: 1.2rem;
+    border-radius: .2rem;
+    background-color: #FFF;
+}
+
+.share-success-box .share-main .title-bar {
+    display: flex;
+    justify-content: center;
+    background-color: #EEE;
+    padding: 0.2rem;
+    border-radius: .2rem .2rem 0 0;
+}
+.share-success-box .share-main .title-bar img {
+    height: .45rem;
+}
+
+.share-success-box .share-main .title-bar .btn-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: .3rem;
+    text-align: center;
+    padding: 0.1rem;
+}
+.share-success-box .share-main .content {
+    padding: .2rem .3rem 0 .3rem;
+    text-align: center;
+}
+.share-success-box .share-main .content .btn-share-again {
+    background-color: #FF0000;
+    color: #fff;
+    width: 3rem;
+    margin: .3rem auto 0 auto;
+    border-radius: 0.1rem;
+    padding: 0.1rem 0;
+}
+
 
 /**
 进度条区域
