--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -63,6 +63,12 @@ body {
 }
 
 
+.cash-red-pack-main .mid .red-pack-box .seize-seat {
+    height: .8rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 .cash-red-pack-main .mid .red-pack-box .go-on-share {
     background-color: #d22e20;
     color: #fff;
@@ -72,6 +78,14 @@ body {
     font-size: 0.4rem;
     height: 0.8rem;
     line-height: .8rem;
+    box-shadow: 1px 1px 1px rgba(0,0,0,1);
+
+    -webkit-animation-name:'ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 0.5s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: alternate;/*定义动画方式*/
 }
 
 .cash-red-pack-main .mid .red-pack-box .time-box {
@@ -581,4 +595,22 @@ body {
 @keyframes sparkle {
     from {background-position:0 0;}
     to {background-position:0 -64px;}
+}
+
+/**
+按钮动画
+ */
+@-webkit-keyframes ripple {
+    0% {
+        width: 4.9rem;
+        height: .7rem;
+        line-height: .7rem;
+        font-size:.39rem;
+    }
+    100% {
+        width: 5rem;
+        height: 0.8rem;
+        line-height: .8rem;
+        font-size: 0.4rem;
+    }
 }
