--- a/public/css/assistance-page.css
+++ b/public/css/assistance-page.css
@@ -46,7 +46,7 @@ body {
 .cash-red-pack-main .mid .box {
     width: 5rem;
     height: 7rem;
-    margin: 1.6rem auto 0 auto;
+    margin: 1rem auto 0 auto;
 }
 
 .cash-red-pack-main .mid .box .red-pack-head {
@@ -89,6 +89,13 @@ body {
     border-radius: 0.3rem;
     color: rgba(155,17,4,1);
     box-shadow: 1px 1px 1px #000;
+
+    -webkit-animation-name:'ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 0.5s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: alternate;/*定义动画方式*/
 }
 
 
@@ -144,3 +151,18 @@ body {
 }
 
 
+/**
+按钮动画
+ */
+@-webkit-keyframes ripple {
+    0% {
+        width: 3.9rem;
+        height: 0.55rem;
+        font-size: 0.29rem;
+    }
+    100% {
+        width: 4rem;
+        height: 0.6rem;
+        font-size: 0.3rem;
+    }
+}
