--- a/public/css/assistance-page.css
+++ b/public/css/assistance-page.css
@@ -141,13 +141,20 @@ body {
 .assistance-success-main .bg .btn-me-too {
     margin: 1.9rem auto 0 auto;
     background-color: #e72317;
-    width: 3.9rem;
+    width: 4.6rem;
     height: .6rem;
     line-height: .6rem;
     border-radius: .3rem;
     letter-spacing: 0.06rem;
     font-weight: 100;
     box-shadow: 1px 1px 1px #000;
+
+    -webkit-animation-name:'btn-me-too-ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 0.5s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: alternate;/*定义动画方式*/
 }
 
 
@@ -164,5 +171,18 @@ body {
         width: 4rem;
         height: 0.6rem;
         font-size: 0.3rem;
+    }
+}
+
+@-webkit-keyframes btn-me-too-ripple {
+    0% {
+        width: 4.5rem;
+        height: .55rem;
+        font-size: .29rem;
+    }
+    100% {
+        width: 4.6rem;
+        height: .6rem;
+        font-size: .3rem;
     }
 }
