--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -377,6 +377,14 @@ body {
     margin: .3rem auto 0 auto;
     border-radius: 0.1rem;
     padding: 0.1rem 0;
+    letter-spacing: 3px;
+
+    -webkit-animation-name:'btn-share-again-ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
+    -webkit-animation-duration: 0.5s;/*动画持续时间*/
+    -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
+    -webkit-animation-delay: 0s;/*动画延迟时间*/
+    -webkit-animation-iteration-count: infinite;/*定义循环资料，infinite为无限次*/
+    -webkit-animation-direction: alternate;/*定义动画方式*/
 }
 
 
@@ -612,5 +620,18 @@ body {
         height: 0.8rem;
         line-height: .8rem;
         font-size: 0.4rem;
+    }
+}
+
+@-webkit-keyframes btn-share-again-ripple {
+    0% {
+        width: 2.9rem;
+        height: 0.42rem;
+        font-size: .28rem;
+    }
+    100% {
+        width: 3rem;
+        height: 0.43rem;
+        font-size: .3rem;
     }
 }
