--- a/public/css/my-balance.css
+++ b/public/css/my-balance.css
@@ -31,6 +31,7 @@ a {
     font-size: .28rem;
     margin: .1rem auto 0;
     border-radius: 0.1rem;
+    color:#FFF;
 }
 .main .top .info .balance > span {
     font-size: 0.3rem;
