--- a/public/css/my-balance.css
+++ b/public/css/my-balance.css
@@ -47,9 +47,12 @@ a {
     margin-left: 0.3rem;
 }
 
-.list .item .right {
+.list .item .balance-type {
     font-size:.3rem;
     align-self:center;
+}
+.list .item .balance-type.in {
+    color:#06BC07;
 }
 
 .list .item .left .date {
