--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -123,11 +123,11 @@ body {
 }
 .assistance-list .assistance-item .money {
     position: absolute;
-    bottom: -0.4rem;
+    bottom: -0.2rem;
     border-radius: 0.2rem;
     padding: 0 .1rem;
-    height: 0.4rem;
-    line-height: .35rem;
+    height: 0.25rem;
+    line-height: 0.25rem;
     align-self: center;
     font-size: .2rem;
     color: #fff;
