--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -69,7 +69,7 @@ body {
     justify-content: center;
     flex-direction: column;
 }
-.cash-red-pack-main .mid .red-pack-box .go-on-share {
+.cash-red-pack-main .mid .red-pack-box .go-on-share, .cash-red-pack-main .mid .red-pack-box .ios-go-on-share {
     background-color: #d22e20;
     color: #fff;
     border-radius: 0.4rem;
@@ -81,7 +81,7 @@ body {
     box-shadow: 1px 1px 1px rgba(0,0,0,1);
 }
 
-#go-on-share {
+.cash-red-pack-main .mid .red-pack-box .go-on-share {
     -webkit-animation-name:'ripple';/*动画属性名，也就是我们前面keyframes定义的动画名*/
     -webkit-animation-duration: 0.5s;/*动画持续时间*/
     -webkit-animation-timing-function: ease; /*动画频率，和transition-timing-function是一样的*/
