--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -122,16 +122,15 @@ body {
     border-radius: 0.5rem;
 }
 .assistance-list .assistance-item .money {
-    position: absolute;
-    bottom: -0.2rem;
-    border-radius: 0.2rem;
+    margin-top: 0.8rem;
     padding: 0 .1rem;
     height: 0.25rem;
     line-height: 0.25rem;
-    align-self: center;
+     align-self: center;
     -webkit-align-self: center;
     font-size: .2rem;
     color: #fff;
+    border-radius: 0.2rem;
     background-color: #d22e20;
 }
 
