--- a/public/css/cash-red-pack-info.css
+++ b/public/css/cash-red-pack-info.css
@@ -122,15 +122,17 @@ body {
     border-radius: 0.5rem;
 }
 .assistance-list .assistance-item .money {
-    margin-top: 0.8rem;
+    position: absolute;
+    left:0.2rem;
+    bottom: -0.2rem;
+    border-radius: 0.2rem;
     padding: 0 .1rem;
     height: 0.25rem;
     line-height: 0.25rem;
-     align-self: center;
+    align-self: center;
     -webkit-align-self: center;
     font-size: .2rem;
     color: #fff;
-    border-radius: 0.2rem;
     background-color: #d22e20;
 }
 
